# kesitcik

./: Make.common  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  kesitcall.C  lolfile.txt  lolfile2.txt  pr
duck/: beak.vtk  body.txt  hop.txt  lol.ods
examples/: Makefile
examples/ex1/: Makefile  ex1.C  kesitcall.C  prop1.C
examples/ex1/duck/: body.vtk  eye.vtk
examples/ex2/: Makefile  ex2.C  prop2.C
examples/ex3/: Makefile  ex3.C  prop3.C
examples/ex4/: Makefile  ex4.C  prop4.C
examples/ex5/: Makefile  ex5.C
examples/ex6/: Makefile  ex6.C
examples/ex7/: Makefile  ex7.C  i1.in  i2.in  i3.in  plot.gp  plot3.gp  plot4.gp
include/: constitutive.h  constitutive.h~  glutMaster.h  interval.h  libmesh_base.h  pr1.h  pr1.h~  predicates.h  predicates.h~  prgl.h  prgl.h~  section.h  triangle.h  type_vector.h~
include/kesitcik/: constitutive.h  glutWindow.h  libmesh_common.h  libmesh_config.h  pr1.h  type_vector.h
pootis/: asd.c  asd.h  asdf.c  predicates.C
src/: constitutive.C  constitutive.C~  glutMaster.C  glutWindow.C  interval.C  pr1.C  pr1.C~  predicates.C  predicates.c~ (Case Conflict 1)  prgl.C  prgl.C~  prmain.C  prmain.C~  section.C  triangle.C  triangle.C~  type_vector.C
